[package]
name = "gap-ecs-poc"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros","time","sync"] }
tokio-tungstenite = "0.21"
tungstenite = { version = "0.21", features = ["handshake"] }
futures = "0.3"
anyhow = "1"
thiserror = "1"
